# clipper

./: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  CMakePresets.json  ClipViewer.cpp  ClipViewer.h  Encoderworker.cpp  Encoderworker.h  MainWindow.cpp  MainWindow.h  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  ScreenRecorder.cpp  ScreenRecorder.h  TrimDialog.cpp  TrimDialog.h  VideoEncoder.cpp  VideoEncoder.h  build.sh  build_windows.bat  main.cpp  main.py  requirements.txt  run_app.bat  setup_ffmpeg.bat  setupvcodec.bat
.github/workflows/: python-app.yml
